{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "e52c7278-632c-41e6-b081-017f3bbcfe4d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "bad7000f-db30-4b3f-9880-38b05c584e11",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "8a69a0b4-144f-4133-962a-26d39c12dc10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "308bc50b-ae5a-47dd-b82c-c8b2eafa3f12",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5936b5d-9adc-48ee-a364-5713cf739df3",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}